prevents image from overflowing parent container

--- a/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/menu.less
+++ b/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/menu.less
@@ -43,6 +43,11 @@
       color: @cc-brand-mid;
     }
 
+    .webapp-markdown-output img {
+      max-height: 100%;
+      max-width: 100%;
+    }
+
     &:hover {
       background-color: darken(@cc-bg, 5);
       transition: background 0.6s;
